<resources>
    <string name="app_name">一呱</string>
    <string name="provice">青海</string>
    <string name="tab_text_home">首页</string>
    <string name="tab_text_list">列表</string>
    <string name="tab_text_travel">活动</string>
    <string name="tab_text_find">自驾游</string>
    <string name="tab_text_me">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">这是测试文字</string>
    <string name="gather">集合地点：</string>
    <string name="contact_way">联系方式：</string>
    <string name="order_price">报名价格：</string>
    <string name="tour_name">旅行社：</string>
    <string name="order_number">订单编号：</string>
    <string name="senic_name">景区名称：</string>
    <string name="start_time">出发时间：</string>
    <string name="contact_person">联 系 人：</string>
    <string name="end_time">回团时间：</string>
    <string name="contact_phone">联系电话：</string>
    <string name="person_count">出游人数：</string>
    <string name="order_price_count">订单金额：</string>

    <string name="ok">完成</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="qpay">QQ钱包</string>
    <string name="upmp">银联</string>
    <string name="bfb">百度钱包</string>
    <string name="jdpay">京东支付</string>
    <string name="confirm">确认</string>
    <string name="yuan">元</string>
    <string name="donateFailMessage">\u3000\u3000感谢你的爱心，\n但是系统出现了一些错误</string>
    <string name="validationErrors">错误</string>
    <string name="notInstalled">未安装支付软件</string>
    <string name="amount">支付金额</string>
    <string name="missingImage">图片加载失败</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="version_unknown">版本未知</string>
    <string name="share">分享</string>


    <string name="start_title">示例代码</string>
    <string name="base_function">基本功能</string>
    <string name="hud_title">HUD显示</string>
    <string name="extend_title">扩展功能</string>
    <string name="extend_navi_navi">自定义导航</string>

    <string name="navibar_title">路径规划</string>
    <string name="navi_car">驾车</string>
    <string name="navi_foot">步行</string>
    <string name="start_hud_navi">HUD显示</string>
    <string name="complex_function">综合展示</string>


    <string name="navi_empty_car">"驾   车"</string>
    <string name="navi_empty_foot">"步   行"</string>
    <string name="navi_start">"起    点"</string>
    <string name="navi_middle">途经点</string>
    <string name="navi_end">"终    点"</string>
    <string name="navi_strategy">"策    略"</string>
    <string name="navi_route">路径规划</string>
    <string name="navi_navi">模拟导航</string>
    <string name="start_navi_navi">实时导航</string>
    <string name="navi_strategy_speed">速度最快</string>
    <string name="navi_strategy_cost">避免收费</string>
    <string name="navi_strategy_distance">距离最短</string>
    <string name="navi_strategy_nohighway">不走高速快速路</string>
    <string name="navi_strategy_timenojam">时间最短且躲避拥堵</string>
    <string name="navi_strategy_costnojam">避免收费且躲避拥堵</string>

    <string name="theme_blue">经典蓝</string>
    <string name="theme_pink">可爱粉</string>
    <string name="theme_white">简约白</string>

    <string name="setting">设置</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="yes">"  是  "</string>
    <string name="no">"  否  "</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="daynightmode">"昼夜模式    "</string>
    <string name="deviationrecalculation">"偏航重算    "</string>
    <string name="jamrecalculation">"拥堵重算    "</string>
    <string name="trafficbroadcast">"交通播报    "</string>
    <string name="camerabroadcast">摄像头播报</string>
    <string name="screenon">"屏幕常亮    "</string>
    <string name="routeshow">线路展示</string>
    <string name="tapmap">点击地图设置</string>
    <string name="starttapmap">我的位置（可点击地图设置）</string>
    <string name="walkdescription">步行状态不可用</string>
    <string name="routeinfo">全程   --公里/--分钟    收费 --元</string>
    <string name="routeinfo_1">全程 </string>
    <string name="routeinfo_2">公里/</string>
    <string name="routeinfo_3">"分钟    收费"</string>
    <string name="routeinfo_4">元</string>
    <string name="routeinfo_default">--</string>
    <string name="app_id">输入您讯飞的appid</string>
    <string name="mypoistion">我的位置</string>
    <string name="mappoistion">地图点选</string>
    <string name="positioninfo">位置信息</string>

    <string-array name="preference_values_tts_role">z
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>vixq</item>
        <item>vixf</item>
        <item>vixm</item>
        <item>vixl</item>
        <item>vixr</item>
        <item>vixyun</item>
        <item>vixk</item>
        <item>vixqa</item>
        <item>vixying</item>
        <item>vixx</item>
        <item>vinn</item>
        <item>vils</item>
    </string-array>

    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="intell_bd_title">智能播报</string>
    <!-- 下拉刷新，上拉加载更多 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_login">Sign in</string>
    <!-- 导航相关 -->
    <string name="action_settings">Settings</string>

    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>



    <!-- 基础布局使用字段 -->
    <string name="network_fault">网络故障！</string>

</resources>
