<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gloomy"
    tools:context="com.qhzlwh.yigua.ui.activity.OrderPay">
    <include layout="@layout/top_tilte"/>
    <LinearLayout
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/order_pay_ordernumber"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/order_number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:text="茶"
    android:id="@+id/order_pay_senicname"/>
     <LinearLayout
         android:layout_marginTop="8dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/start_time"
             android:layout_weight="1"
             android:id="@+id/order_start_time"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/contact_person"
             android:layout_weight="1"
             android:id="@+id/order_contact_person"/>
     </LinearLayout>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:layout_weight="1"
                android:id="@+id/order_end_time"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_phone"
                android:layout_weight="1"
                android:id="@+id/order_contact_phone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/person_count"
                android:layout_weight="1"
                android:id="@+id/order_person_count"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_price_count"
                android:layout_weight="1"
                android:id="@+id/order_price_count"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:padding="8dp"
            android:id="@+id/pay_ali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:background="@mipmap/ali"
                android:layout_width="48dp"
                android:layout_height="48dp" />
            <TextView
                android:textSize="18sp"
                android:text="支付宝"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"/>
           <ImageView
               android:layout_marginRight="8dp"
               android:layout_gravity="center"
               android:background="@mipmap/into"
               android:layout_width="16dp"
               android:layout_height="24dp" />
        </LinearLayout>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gloomy"/>
        <LinearLayout
            android:padding="8dp"
            android:id="@+id/pay_wx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@mipmap/wx"
                android:layout_width="48dp"
                android:layout_height="48dp" />
            <TextView
                android:textSize="18sp"
                android:text="微信"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"/>
            <ImageView
                android:layout_marginRight="8dp"
                android:layout_gravity="center"
                android:background="@mipmap/into"
                android:layout_width="16dp"
                android:layout_height="24dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
